syntax = "proto3";

package yupi;

service Creator {
    // метод позволяет сервисам реистриваться сервисам
    // для того чтобы потом их можно было использовать инспектору
    rpc Create(MessageRequest) returns (MessageResponse) {}
    rpc CreateByStream(stream MessageRequest) returns (stream MessageResponse) {}
}



message MessageRequest {
    string msg = 1;
}

message MessageResponse {
    int64 id = 1;
    string time =2;
}